- VDR discovery on UDP Port 6419
- some socket and communication bugfixes
- (nearly) proper shutdown
- discovered VDR are also available in all pages (and also removed if not available anymore)
- new configuration entry in jonglisto-ng.xml: startDiscovery.
-    if this value does not exists or is false or if the SVDRP server port is 0
-    the new VDR discovery server will not be started

0.2.5:
New:
- upgrade to Vaadin 8.4.4

0.2.4:
Bugfixes:
- buxfix epg search configuration. Init Logger failed
- code cleanup
- compatibility with VDR <= 2.3.3 (command LSTC :ids and PING)

New:
- upgrade to xtend 2.14.0
- upgrade to Vaadin 8.4.2

0.2.3:
Bugfixes:
- implement forgotten functionality in epgd search timers (toggle active/inactive and delete)
- time values was wrong due to Daylight Saving Time

New:
- moved retransmission setting epgd searchtimer to first tab
- new epg search functionality based on regular expressions (configurable in Configuration/Extended EPG search)
- new permission view:config:epgsearch
- create search timer in epg overview
- upgrade to Vaadin 8.3.3
- render timer timeline as SVG (more robust in terms of zoom)
- new configuration parameter 'timezone' to set the time zone used by the application
- replaced recordings view with a new explorer like view

0.2.2:
Bugfixes:
- svdrp server: closed client socket can result in a timeout on client side in subsequent connections and requests

New:


0.2.1:
Bugfixes:
- exception if the channel logo path does not exists at all
- get scraper information

New:
- changed internal logger to be more flexible
- log configuration at runtime (including log files), Configuration/Log
  But be aware: Syslog appender only works if syslog networking is enabled!
- new permission view:config:log (use with care, this permission allows to change the whole application logging)
- upgrade to Vaadin 8.3.2

0.2.0:
Bugfixes:
- delete multiple recordings could destroy the internal tree data structure