@@ -93,6 +93,7 @@ login_username  = Benutzer
 menu_epg        = EPG
 menu_logout     = Abmelden
 menu_osd        = OSD
+menu_osd2Web    = OSD2Web
 menu_recordings = Aufnahmen
 menu_search_timer_epgd = Suchtimer (epgd)
 menu_search_timer_epgsearch = Suchtimer (epgsearch)
