@@ -92,6 +92,7 @@ login_username  = Username
 menu_epg        = EPG
 menu_logout     = Logout
 menu_osd        = OSD
+menu_osd2Web    = OSD2Web
 menu_recordings = Recordings
 menu_search_timer_epgd = Search timer (epgd)
 menu_search_timer_epgsearch = Search timer (epgsearch)
